# windows-client

./: README.md  package.json
app/: global.ts  icons.tsx  layout.tsx  page.tsx  style.ts  styles.ts
app/editor/: editor.tsx  style.ts  useCodeMirror.tsx
app/header/: header.tsx  style.ts
app/menu/: menu.tsx  style.ts
app/note/: note.tsx  style.ts
app/note/editor/: editor.tsx  style.ts  useCodeMirror.tsx
app/note/header/: header.tsx  style.ts  viewButtons.tsx
app/note/preview/: runmode.ts  style.ts
app/preview/: preview.tsx  remarkCode.tsx  style.ts
app/title/: style.ts  title.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/data/: mod.rs
src-tauri/src/data/items/: mod.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/profile/list/: mod.rs
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/components/mainSection/: mainSection.tsx  style.ts
src/app/components/menu/: menu.tsx  style.ts  type.ts
src/app/components/menu/components/: noteItem.tsx  style.ts
src/app/components/menu/components/folder/: foderItem.tsx  (+1 more)
src/app/components/title/: navigation.ts  style.ts  title.tsx
src/app/components/title/components/: dropDownMenu.tsx  menuItem.tsx
src/app/note/: note.tsx  page.tsx  style.ts
src/app/note/components/editor/: editor.tsx  style.ts  useCodeMirror.tsx
src/app/note/components/header/: header.tsx  style.ts
src/app/note/components/preview/: preview.tsx  style.ts
src/app/notes/[id]/: note.tsx  page.tsx
src/app/styles/: globalStyles.ts  icons.tsx  style.ts
src/hooks/: useNoteState.ts
(+9 files in other folders)
